# ext-cardano-node

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  controller.yml  proxy.yml
bootstrap/: main.tf  variables.tf
bootstrap/configs/: main.tf
bootstrap/configs/preprod-local/: topology.json
bootstrap/configs/prime-testnet/: config.json
bootstrap/configs/sanchonet/: config.json
bootstrap/configs/testnet/: config.json
bootstrap/configs/vector-mainnet/: config.json  topology.json
bootstrap/configs/vector-testnet/: topology.json
bootstrap/crds/: main.tf
bootstrap/feature/: config.tf  main.tf  operator.tf
bootstrap/instance/: main.tf  monitor.tf  node.tf
bootstrap/proxy/: cert.tf  config.tf  deployment.tf  main.tf  service.tf
bootstrap/relay/: main.tf
bootstrap/service/: main.tf
docker/: dockerfile.operator  dockerfile.proxy
examples/: manifest.yaml  setup
operator/: Cargo.toml  README.md
operator/src/: config.rs  controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  utils.rs
operator/src/handlers/: gateway.rs
operator/src/helpers/: mod.rs
operator/yaml/: crd.yaml  port.yaml
proxy/: .gitignore  Cargo.toml  README.md
proxy/examples/: manifest.yaml
proxy/src/: auth.rs  config.rs  main.rs  metrics.rs  proxy.rs  tiers.rs  utils.rs
