[package]
name = "operator"
version = "0.1.0"
edition = "2021"
default-run = "controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
bech32 = "0.11.0"
dotenv = "0.15.0"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["runtime", "client", "derive"] }
lazy_static = "1.5.0"
prometheus = "0.14.0"
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
regex = "1.11.3"
chrono = "0.4.42"

[[bin]]
name="controller"
path="src/main.rs"

[[bin]]
name="crdgen"
path="src/crdgen.rs"

[lib]
path = "src/lib.rs"
