[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operator = { path = "../operator" }
tokio = { version = "1.36.0", features = ["full"] }
regex = "1.10.3"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
futures-util = "0.3.30"
pingora = "0.1.0"
pingora-limits = "0.1.0"
prometheus = "0.13.3"
async-trait = "0.1.77"
leaky-bucket = "1.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"
notify = "6.1.1"
bech32 = "0.11.0"
