[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
bech32 = "0.11.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
leaky-bucket = "1.0.1"
notify = "8.2.0"
openssl = "0.10.64"
operator = { path = "../operator" }
pingora = { version = "0.6.0", features = ["openssl"] }
pingora-limits = "0.6.0"
prometheus = "0.13.0"
rand = "0.9.2"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.9.7"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
